fix: all endpoints returning list should support pagination